# MixedBerryPie

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MixedBerryPie.iss  MixedBerryPie.spec  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml  ruff_errors.txt  run.py  run_tests.ps1  temp_diff.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
developer_docs/: project_management.md  shortcut_mechanism.md
docs/: Gemfile  _config.yml  faq.md  index.md  project_management.md  settings.md  translation_guide.md  usage.md
docs/_sass/custom/: custom.scss  setup.scss
package/: AppxManifest.xml
resources/icons/: _icon_list.txt
resources/translations/: piemenu_ja.qm  piemenu_ja.ts
scripts/: README.md  apply_translations.py  build.py  check_translations.py  compile_translations.py  config_reader.py  convert_icon.py  curate_icons.py  download_icons.py  fix_ts_file.py  generate_icons.py  install_cert.ps1  make_release.ps1  merge_translations.py  package_msix.ps1  reset_config.py  setup.ps1  sign_msix_local.ps1  update_translations.py  update_version.py  verify_icon_resolution.py  verify_translations.py  verify_ui_imports.py  verify_welcome_dialog.py
src/: app.py
src/core/: config.py  hook_manager.py  i18n.py  logger.py  utils.py  version.py  win32_input.py
src/ui/: help_dialog.py  overlay.py  settings_ui.py  welcome_dialog.py
src/ui/components/: custom_widgets.py  icon_picker.py  item_editor.py  pie_preview.py  pie_renderer.py  preset_manager.py
tests/: conftest.py  test_app.py  test_app_targeting.py  test_config.py  test_config_helpers.py  test_hook_manager.py  test_icon_config.py  test_integration_flow.py  test_key_sequence_edit.py  test_onboarding.py  test_overlay.py  test_pie_geometry.py  test_settings_ui.py  test_utils.py  test_validation.py  test_win32_input.py
