[project]
name = "mixedberrypie"
version = "1.1.0"
description = "A sleek, customizable radial pie menu for quick keyboard shortcuts on Windows."
authors = [
    {name = "Renge2212"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "pynput>=1.8.1",
    "pyqt6>=6.6.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "types-pynput>=1.8.1.20250809",
    "pyside6>=6.10.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "resources",  # Translation files (.ts) and other non-Python resources
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "A",   # flake8-builtins
    "S",   # flake8-bandit (security)
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N802",  # function name should be lowercase (Qt/PySide uses camelCase)
    "S101",  # use of assert (common in tests)
    "RUF001", # ambiguous unicode characters (intentional in UI strings)
    "RUF013", # implicit optional (PEP 484 allows this)
    "S603",  # subprocess without shell=True (we validate inputs)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert allowed in tests
    "S105",  # hardcoded passwords in tests are ok
    "S106",  # hardcoded passwords in tests are ok
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mixedberrypie]
display_name = "MixedBerryPie"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
show_error_codes = true
pretty = true
explicit_package_bases = true
exclude = [
    'resources',
]

[[tool.mypy.overrides]]
module = "keyboard.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true
